--- a/Module 1/Exercise 3/style.css
+++ b/Module 1/Exercise 3/style.css
@@ -9,12 +9,13 @@
 
 body {
   background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+  display: flex;
 }
 
 .sidebar {
-  height: 100vh;
+  min-height: 100vh;
   width: 20%;
-  background-color: black;
+  background-color: #010101;
   color: white;
   display: flex;
   flex-direction: column;
@@ -40,6 +41,65 @@ body {
   padding: 1em;
 }
 
-.list-items:hover {
+ul li:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.content {
+  padding: 2.5em;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 60%;
+  color: white;
+}
+
+.content h1 {
+  font-size: 2em;
+}
+
+.songs-wrapper {
+  display: flex;
+  gap: 0.5em;
+  overflow: scroll;
+  padding: 1em;
+}
+
+.card {
+  padding: 1.2em;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 0.5em;
+}
+
+.card:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.card-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1em;
+}
+
+.add-button {
+  padding: 1em 0;
+  font-size: 1.2em;
+}
+
+.friends-activity {
+  padding: 1em;
+  color: white;
+  width: 20%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.activity-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.activity-header h1 {
+  font-size: 1.2em;
 }
