--- a/Module 1/Exercise 3/style.css
+++ b/Module 1/Exercise 3/style.css
@@ -50,6 +50,9 @@ ul li:hover {
   background-color: rgba(0, 0, 0, 0.1);
   width: 60%;
   color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
 }
 
 .content h1 {
@@ -61,6 +64,7 @@ ul li:hover {
   gap: 0.5em;
   overflow: scroll;
   padding: 1em;
+  margin-top: 1em;
 }
 
 .card {
@@ -102,4 +106,35 @@ ul li:hover {
 
 .activity-header h1 {
   font-size: 1.2em;
+}
+
+.activity-wrapper {
+  padding: 1em 0;
+}
+
+.friends-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.activity-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5em;
+  font-size: 0.8em;
+}
+
+.activity-card img {
+  border-radius: 2.5em;
+}
+
+.friends-listening {
+  display: flex;
+  gap: 0.5em;
+}
+
+.pointer {
+  cursor: pointer;
 }
