--- a/Module 1/Exercise 3/style.css
+++ b/Module 1/Exercise 3/style.css
@@ -110,6 +110,9 @@ ul li:hover {
 
 .activity-wrapper {
   padding: 1em 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
 }
 
 .friends-wrapper {
