--- a/Module 1/Exercise 3/style.css
+++ b/Module 1/Exercise 3/style.css
@@ -10,6 +10,8 @@
 body {
   background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
   display: flex;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .sidebar {
@@ -53,6 +55,7 @@ ul li:hover {
   display: flex;
   flex-direction: column;
   gap: 1.5em;
+  overflow: scroll;
 }
 
 .content h1 {
